--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -9,10 +9,24 @@ body,
   color: var(--color-tone-1);
 }
 
+/* icon default styling */
 svg {
   height: 30px;
   color: var(--color-tone-2);
 }
 path {
   stroke-width: 1.1;
+}
+
+/* clear button styles */
+button,
+input[type="submit"],
+input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
